# NOVA-STUDIO-DAW-0901-

./: .env.example  .gitignore  App.tsx  DEPLOY_DEBUG.md  README.md  check-deploy.sh  check-instrumentals-new.mjs  check-instrumentals.mjs  check-instruments.mjs  check-pending.mjs  index.css  index.html  index.tsx  metadata.json  package-lock.json  package.json  supabase_add_api_key_column.sql  supabase_schema_instruments.sql  tailwind.config.js  test-final.mjs  test-login.mjs  test-supabase.mjs  tsconfig.json  types.ts  vercel.json  vite.config.ts
api/: chat.js  chat.ts  health.ts
bridge-python/: README.md  asio_bridge.py  asio_control_panel.py  audio_processor.py  nova_bridge_server.py  requirements.txt  start_asio_bridge.bat  start_bridge.bat  vst3_manager.py
components/: AdminPanel.tsx  AdminTemplateButton.tsx  ArrangementView.tsx  AudioSettingsPanel.tsx  AutomationLane.tsx  ChatAssistant.tsx  EnvelopeEditor.tsx  ErrorBoundary.tsx  InstrumentCatalog.tsx  KeyboardShortcutsModal.tsx  LandingPage.tsx  MeterWidgets.tsx  MixerView.tsx  MobileArrangementPage.tsx  MobileBottomNav.tsx  MobileBrowserPage.tsx  MobileContainer.tsx  MobileMixerPage.tsx  MobilePluginsPage.tsx  MobileTracksPage.tsx  MobileTransport.tsx  PianoRoll.tsx  SideBrowser2.tsx  SmartKnob.tsx  SpectrumAnalyzer.tsx  TimelineGridMenu.tsx  TrackCreationBar.tsx  TrackHeader.tsx  (+2 more)
nova-vst-host/: CMakeLists.txt  README.md  build.bat
nova-vst-host/Source/: Main.cpp  MainComponent.cpp  MainComponent.h  PluginManager.cpp  PluginManager.h  UICapture.cpp  UICapture.h  WebSocketServer.cpp  WebSocketServer.h
(+115 files in other folders)
